fix overflow content

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -18,6 +18,9 @@ body {
   width: 100%;
   min-height: 100vh;
 }
+html,body{
+  overflow-x: hidden;
+}
 
 /* start components */
 
